feat: Improve code